<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="app_version" translatable="false">1.1.2</string>
    <string name="app_copyright">created by daviinacio</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-1507172442893539~8560684941</string>

    <string name="main_player_vs_machine">Player vs. Machine</string>
    <string name="main_player_vs_player">Player vs. Player</string>

    <string name="activity_scoreboard_title" translatable="false">@string/scoreboard</string>
    <string name="activity_main_title" translatable="false">@string/app_name</string>
    <string name="activity_difficulty_title">Choose Your Difficulty</string>
    <string name="activity_game_title" translatable="false">@string/app_name</string>

    <string name="game_tile_already_marked">This option is already marked</string>

    <string name="game_your_turn">Your turn</string>
    <string name="game_machine_turn">Machine turn</string>
    <string name="game_player1_turn">Player1 turn</string>
    <string name="game_player2_turn">Player2 turn</string>
    <string name="game_player_name_turn">%s turn</string>

    <string name="game_init_wait">Wait for your turn</string>

    <string name="game_you_won_turn">You won this turn</string>
    <string name="game_machine_won_turn">Machine won this turn</string>
    <string name="game_player1_won_turn">Player1 won this turn</string>
    <string name="game_player2_won_turn">Player2 won this turn</string>
    <string name="game_player_name_won_turn">%s won this turn</string>
    <string name="game_tie_turn">Gave tie!</string>

    <string name="game_empty_score">Nobody got scores on this match!</string>

    <string name="game_db_inserted">This game was saved on scoreboard</string>
    <string name="game_db_deleted">The score was deleted from scoreboard</string>

    <string name="scoreboard_empty_title">Nothing here yet</string>
    <string name="scoreboard_empty_message">Your scoreboards will be showing here!</string>

    <string name="alert_delete_score_title">Delete score</string>
    <string name="alert_delete_score_message">This score will be deleted.\nPress [delete] to continue</string>

    <string name="scoreboard">Score Board</string>
    <string name="settings">Settings</string>
    <string name="version">Version</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="back">Back</string>
    <string name="you">You</string>
    <string name="tie">Tie</string>
    <string name="opponent">Opponent</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="machine">Machine</string>
    <string name="player" translatable="false">Player</string>
    <string name="player1" translatable="false">Player 1</string>
    <string name="player2" translatable="false">Player 2</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    
    <string name="func_in_dev">Functionality in Development</string>
</resources>
